--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,13 @@
 page-home {
+  div.file-thumbnail-container {
+    height: 50px;
+    width: 50px;
+    display: flex;
+    justify-content: center;
 
+    img {
+      object-fit: cover;
+      object-position: center;
+    }
+  }
 }
